update vmidentity jars that have vulnerabilities (as reported by appcheck)
esapi-2.0.1.jar             esapi-2.1.0.1.jar

log4j-1.2.16.jar            log4j-1.2.17.jar
log4j-1.2-api-2.0.2.jar     log4j-1.2-api-2.8.2.jar
log4j-api-2.2.jar           log4j-api-2.8.2.jar
log4j-core-2.2.jar          log4j-core-2.8.2.jar
log4j-slf4j-impl-2.2.jar    log4j-slf4j-impl-2.8.2.jar
slf4j-api-1.7.10.jar        slf4j-api-1.7.25.jar
jcl-over-slf4j-1.7.10.jar   jcl-over-slf4j-1.7.25.jar

serializer-2.7.1.jar        serializer-2.7.2.jar
xalan-2.7.1.jar             xalan-2.7.2.jar

tomcat-coyote-8.5.5.jar     tomcat-coyote-8.5.19.jar

spring-aop-4.0.6.RELEASE.jar        spring-aop-4.3.4.RELEASE.jar
spring-beans-4.0.6.RELEASE.jar      spring-beans-4.3.4.RELEASE.jar
spring-context-4.0.6.RELEASE.jar    spring-context-4.3.4.RELEASE.jar
spring-core-4.0.6.RELEASE.jar       spring-core-4.3.4.RELEASE.jar
spring-expression-4.0.6.RELEASE.jar spring-expression-4.3.4.RELEASE.jar
spring-test-4.0.6.RELEASE.jar       spring-test-4.3.4.RELEASE.jar
spring-web-4.0.6.RELEASE.jar        spring-web-4.3.4.RELEASE.jar
spring-webmvc-4.0.6.RELEASE.jar     spring-webmvc-4.3.4.RELEASE.jar

Change-Id: I1c60bf6e13a559cf3fcdaf0cefa434e9d677aab8

--- a/vmidentity/config/vmware-stsd.sh.in
+++ b/vmidentity/config/vmware-stsd.sh.in
@@ -68,6 +68,7 @@ StartService()
             -Dvmware.log.dir=$STSD_LOG_DIR \
             -Dorg.apache.catalina.connector.CoyoteAdapter.ALLOW_BACKSLASH=true \
             -Djava.io.tmpdir="$CATALINA_BASE/temp" \
+            -Djavax.xml.transform.TransformerFactory=com.sun.org.apache.xalan.internal.xsltc.trax.TransformerFactoryImpl \
             $DAEMON_CLASS start
 
     rc=$?
